--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,15 +11,6 @@ body {
     margin: 0;
 }
 
-.container {
-    max-width: 350px;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 15px;
-    padding: 20px;
-    border: 2px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-}
-
 .game-box-head {
     background: none;
     color: #0d6efd;
@@ -103,4 +94,12 @@ body {
     margin-top: 10px;
     color: #fff;
     border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.battlefield-game .tile-grid {
+    width: 100%;
+    min-width: 400px;
+    padding: 30px 20px;
+    border: 1px solid #fff;
+    border-radius: 10px;
 }
