--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,12 @@
-@import 'bootstrap/dist/css/bootstrap.css';
+@import "bootstrap/dist/css/bootstrap.css";
 
 body {
     background: linear-gradient(to bottom, #000, #1a3c34);
     color: white;
-    font-family: 'Orbitron', sans-serif;
-    display: flex;
+    font-family: "Orbitron", sans-serif;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     height: 100vh;
     margin: 0;
 }
@@ -96,10 +96,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.battlefield-game .tile-grid {
-    width: 100%;
-    min-width: 400px;
-    padding: 30px 20px;
-    border: 1px solid #fff;
-    border-radius: 10px;
+.tower-border {
+    border: 1px solid;
+    padding: 25px;
 }
